# meshfilm

./: .gitignore  AGENTS.md  README.md  meshfilm.code-workspace  pyproject.toml  ref.html
src/meshfilm/: __init__.py  _graphql.py  base_api_endpoint.py  constants.py  exceptions.py
src/meshfilm/_tools/: rebuild_models.py  remove_redundant_files.py
src/meshfilm/detail_modal/: __init__.py  models.json  models.py
src/meshfilm/lodp_title_and_plans_page/: __init__.py  models.json  models.py
src/meshfilm/mini_modal/: __init__.py  models.json  models.py
src/meshfilm/preview_modal_episode_selector/: __init__.py  models.json  models.py
src/meshfilm/preview_modal_episode_selector_season_episodes/: __init__.py  models.json  models.py
src/meshfilm/preview_modal_video_title_group/: __init__.py  models.json  models.py
src/meshfilm/search_page_results/: __init__.py  models.json  models.py
src/meshfilm/title/: __init__.py  models.json  models.py
tests/: __init__.py  conftest.py  test_detail_modal.py  test_lodp_title_and_plans_page.py  test_meshfilm.py  test_mini_modal.py  test_preview_modal_episode_selector.py  test_preview_modal_episode_selector_season_episodes.py  test_preview_modal_video_title_group.py  test_search_page_results.py  utils.py
